Issue #8746 fix: Select user label is overlapping on the user profile

--- a/src/pages/user-and-groups/group-details/group-details.scss
+++ b/src/pages/user-and-groups/group-details/group-details.scss
@@ -74,8 +74,8 @@ page-group-member {
           background-color: #a1a1a1;
           padding: 5px 0px 5px 20px;
           color: white;
-          position: fixed !important;
-          bottom: 93px;
+          // position: fixed !important;
+          // bottom: 93px;
         }
         .no-padding{
           padding: 0px !important;
