--- a/src/pages/user-and-groups/user-and-groups.scss
+++ b/src/pages/user-and-groups/user-and-groups.scss
@@ -86,8 +86,8 @@ page-user-and-groups {
         background-color: #a1a1a1;
         padding: 1% 0% 1% 5%;
         color: white;
-        position: fixed !important;
-        bottom: 32px;
+        // position: fixed !important;
+        // bottom: 32px;
         }
         
       .advanced-menu{
